In layers window the data source name has been cut off (i.e. Human Foo). Can it be written in full? - items fixed

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -511,11 +511,11 @@ div#export_window div.block a.export:hover {background-position:0 -26px;}
 
 
 /*LAYER WINDOW*/
-div#layer_window {position:absolute!important; display:none; left:-27px; top:185px; width:217px; height:254px; padding:25px; background:url('/images/editor/layer_bkg.png') no-repeat 0 0; z-index:100;}
+div#layer_window {position:absolute!important; display:none; left:-27px; top:185px; width:227px; height:254px; padding:25px 15px 25px 25px; background:url('/images/editor/layer_bkg.png') no-repeat 0 0; z-index:100;}
 div#layer_window a#layer_close {position:absolute; right:23px; top:23px; background:url('/images/editor/close_source.png') no-repeat 0 0; width:16px; height:16px; padding:0; margin:0; text-indent:-9999px;}
 div#layer_window a#layer_close:hover {background-position:0 -16px; cursor:pointer;}
 div#layer_window h3 {margin:0 0 0 12px; font:normal 11px "Futura","FuturaStdMedium"; color:#666666; text-shadow:0 1px white;}
-div#layer_window ul {position:relative; display:inline-block; width:100%; height:175px; margin:18px 0 0 0; overflow:auto;}
+div#layer_window ul {position:relative; display:inline-block; width:227px!important; height:175px; margin:18px 0 0 0; overflow:auto;}
 div#layer_window ul:focus {outline:none;}
 div#layer_window ul .jspContainer{overflow:hidden;position:relative;}
 div#layer_window ul .jspPane{position:absolute;}
@@ -536,13 +536,13 @@ div#layer_window ul .jspHorizontalBar .jspArrow{width:16px;float:left;height:100
 div#layer_window ul .jspVerticalBar .jspArrow:focus{outline:none;}
 div#layer_window ul .jspCorner{background:#eeeef4;float:left;height:100%;}
 div#layer_window ul * html .jspCorner{margin:0 -3px 0 0;}
-div#layer_window ul li {width:180px; margin:0 0 0 2px; padding:10px; background:url('/images/editor/layer_list_separator.png') repeat-x 0 bottom;}
+div#layer_window ul li {width:200px; margin:0 0 0 2px; padding:10px; background:url('/images/editor/layer_list_separator.png') repeat-x 0 bottom;}
 div#layer_window ul li.moving {background:#ffffff; border-radius:6px; -webkit-border-radius:6px; -moz-border-radius:6px; -webkit-box-shadow:0 0 10px rgba(0,0,0,0.5);}
 div#layer_window ul li.last {background:none;}
 div#layer_window ul li h4 {width:100%; overflow:hidden; text-overflow:ellipsis; white-space:nowrap; font:bold 13px Arial; color:#333333;}
-div#layer_window ul li span {display:inline-block; width:130px; margin:2px 5px 0 0; }
-div#layer_window ul li span p {display:inline-block; max-width:75px; overflow:hidden; text-overflow:ellipsis; white-space:nowrap; font:normal 12px Arial; color:#666666;}
-div#layer_window ul li span a {display:none}
+div#layer_window ul li span {display:inline-block; width:150px; margin:2px 5px 0 0; }
+div#layer_window ul li span p {display:inline-block; max-width:120px; overflow:hidden; text-overflow:ellipsis; white-space:nowrap; font:normal 12px Arial; color:#666666;}
+div#layer_window ul li span a {display:none;}
 div#layer_window ul li span p a {display:inline; color:#666666}
 div#layer_window ul li span p a:hover {display:inline; color:#333333}
 div#layer_window ul li:hover span a.remove_layer {display:inline-block; float:none; height:auto; width:auto!important; margin:0; padding:0 0 0 5px; font:normal 12px Arial; color:#333333; background:none; border:none;}
